--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "coverage": "nyc npm test"
   },
   "keywords": [],
   "author": "",
@@ -17,7 +18,23 @@
     "globals": "^16.5.0",
     "jest": "^30.2.0",
     "mocha": "^11.7.5",
+    "nyc": "^17.1.0",
     "prettier": "3.7.4"
+  },
+  "nyc": {
+    "include": [
+      "src/**/*.js",
+      "lib/**/*"
+    ],
+    "exclude": [
+      "**/*.test.js"
+    ],
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "all": true,
+    "cache": false
   },
   "dependencies": {
     "init": "^0.1.2"
